--- a/frontend/src/components/styles/Loading.css
+++ b/frontend/src/components/styles/Loading.css
@@ -1,9 +1,7 @@
 .loading-overlay {
     position: absolute;
-    left: 0px;
-    right: 0px;
-    bottom: 0px;
-    top: 0px;
+    left: 47%;
+    top:-25px;
     background: rgba(0, 0, 0, 0.5);
     z-index: 2;
 }
